dockerfile 修正 * from を変更

--- a/data-volume/Dockerfile
+++ b/data-volume/Dockerfile
@@ -1,10 +1,7 @@
 # Data Volume Container for boot2docker
 
-FROM dockerfile/ubuntu:14.04
+FROM ubuntu:14.04
 MAINTAINER zanenform
-
-# Ubuntu update
-RUN apt-get -y update
 
 # ユーザー作成
 RUN groupadd -g 1000 storage
