--- a/nginx-rel-consul/Dockerfile
+++ b/nginx-rel-consul/Dockerfile
@@ -7,10 +7,8 @@
 # consul と連携することでマルチホストアプリケーションサーバーに対応します。
 # docker run -itd -p 80:80 -p 443:443 --dns `docker inspect --format="{{ .NetworkSettings.IPAddress }}" [consulコンテナ]` nginx
 
+FROM ubuntu:14.04
 MAINTAINER zanenform
-
-# Pull base image.
-FROM dockerfile/ubuntu:14.04
 
 # Install Nginx.
 RUN apt-get -y update && apt-get install -y nginx
