--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -5,10 +5,8 @@
 # 
 # docker run -itd -p 80:80 -p 443:443 --link [php5-fpmコンテナ]:php5-fpm nginx
 
+FROM ubuntu:14.04
 MAINTAINER zanenform
-
-# Pull base image.
-FROM dockerfile/ubuntu:14.04
 
 # Install Nginx.
 RUN apt-get -y update && apt-get install -y nginx-extras lua-nginx-redis
