--- a/nginx/fuelphp-redis/Dockerfile
+++ b/nginx/fuelphp-redis/Dockerfile
@@ -7,7 +7,7 @@
 #   redis
 #
 # redis と連携することでマルチホストアプリケーションサーバーに対応します。
-# docker run -itd -p 80:80 -p 443:443 --env REDISSERVER=192.168.59.103 nginx
+# docker run -itd -p 80:80 -p 443:443 --env REDISSERVER=[redis.の.IP.アドレス] nginx
 
 FROM ubuntu:14.04
 MAINTAINER zanenform
