--- a/nginx/fuelphp-redis/Dockerfile
+++ b/nginx/fuelphp-redis/Dockerfile
@@ -17,7 +17,7 @@ RUN apt-get -y update && apt-get install -y nginx-extras lua-nginx-redis
 
 # Nginx Config.
 RUN sed -i '1s/^/daemon off;\n/' /etc/nginx/nginx.conf && \
-  sed -i '1s/^/env PHP5-FPM;\n/' /etc/nginx/nginx.conf
+  sed -i '1s/^/env REDISSERVER;\n/' /etc/nginx/nginx.conf
 COPY fuelphp-conf /etc/nginx/sites-available/default
 
 # Install Redis cli.
@@ -27,5 +27,4 @@ RUN apt-get install -y redis-tools
 EXPOSE 80 443
 
 # Define default command.
-# docker run から環境変数の値を渡すために、引数は利用しない
 CMD ["/usr/sbin/nginx"]
