--- a/nginx/fuelphp/Dockerfile
+++ b/nginx/fuelphp/Dockerfile
@@ -14,7 +14,7 @@ RUN apt-get -y update && apt-get install -y nginx-extras lua-nginx-redis
 # Nginx Config.
 RUN chown -R www-data:www-data /var/lib/nginx && \
   sed -i '1s/^/daemon off;\n/' /etc/nginx/nginx.conf && \
-  sed -i '1s/^/env PHP5-FPM;\n/' /etc/nginx/nginx.conf
+  sed -i '1s/^/env PHP5_FPM_PORT_9000_TCP_ADDR;\n/' /etc/nginx/nginx.conf
 
 COPY fuelphp-conf /etc/nginx/sites-available/default
 
@@ -22,5 +22,4 @@ COPY fuelphp-conf /etc/nginx/sites-available/default
 EXPOSE 80 443
 
 # Define default command.
-# docker run --linkから環境変数の値を渡すために、引数は利用しない
 CMD ["/usr/sbin/nginx"]
