* ドキュメントルートがマウントされていないのを修正。 * 変数のtypoを修正

--- a/nginx/fuelphp/Dockerfile
+++ b/nginx/fuelphp/Dockerfile
@@ -3,7 +3,7 @@
 #   fuelPHP
 #   Single host application
 #
-# docker run -itd -p 80:80 -p 443:443 --link [php5-fpmコンテナ]:php5-fpm --link [mysqlコンテナ]:mysql -e "FUEL_ENV=[local|development|production|...]" zannenform/nginx-fuelphp
+# docker run -itd -p 80:80 -p 443:443 -v <html-dir>:/var/www --link [php5-fpmコンテナ]:php5-fpm --link [mysqlコンテナ]:mysql -e "FUEL_ENV=[local|development|production|...]" zannenform/nginx-fuelphp
 
 FROM ubuntu:14.04
 MAINTAINER zanenform
@@ -19,9 +19,13 @@ RUN chown -R www-data:www-data /var/lib/nginx && \
   sed -i '1s/^/env PHP5_FPM_PORT_9000_TCP_ADDR;\n/' /etc/nginx/nginx.conf && \
   sed -i '1s/^/env MYSQL_PORT_3306_TCP_ADDR;\n/' /etc/nginx/nginx.conf && \
   sed -i '1s/^/env MYSQL_PORT_3306_TCP_PORT;\n/' /etc/nginx/nginx.conf && \
-  sed -i '1s/^/env FUEL_ENV;\n/' /etc/nginx/nginx.conf
+  sed -i '1s/^/env FUEL_ENV;\n/' /etc/nginx/nginx.conf && \
+  mkdir /var/www
 
 COPY fuelphp-conf /etc/nginx/sites-available/default
+
+# Define mountable directories.
+VOLUME ["/var/www"]
 
 # Expose ports.
 EXPOSE 80 443
